# chanlun-trend-mechanism-skills

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: release-checklist.md  system.md
docs/releases/: v0.1.0.md
skills/chan-trend-mechanism/: SKILL.md
skills/chan-trend-mechanism/agents/: openai.yaml
skills/chan-trend-mechanism/references/: data_schema.md  mechanism.md
skills/chan-trend-mechanism/scripts/: macd_enrichment.py  panel.py  structure_analyzer.py
tests/: helpers.py  test_macd_enrichment.py  test_panel.py  test_structure_analyzer.py
